<resources>
    <string name="app_name">GasGauge</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="vehicle_name_hint">Enter vehicle name</string>
    <string name="vehicle_miles_hint">Enter miles on odometer</string>
    <string name="vehicle_gallons_hint">Enter fuel tank gallons</string>
    <string name="title_activity_check_miles">CheckMilesActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_check_miles">Check Mileage</string>
    <string name="text_fill_up">Fill Up</string>
    <string name="text_update_vehicle">Update Vehicle</string>
    <string name="title_activity_fill_up">FillUpActivity</string>
</resources>
