<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.stevendiaz.gasgauge.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_check_miles"
        android:id="@+id/button_check_miles"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_fill_up"
        android:id="@+id/button_fill_up"
        android:layout_above="@+id/button_check_miles"
        android:layout_alignLeft="@+id/button_check_miles"
        android:layout_alignStart="@+id/button_check_miles"
        android:layout_alignRight="@+id/button_check_miles"
        android:layout_alignEnd="@+id/button_check_miles" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_update_vehicle"
        android:id="@+id/button_update_vehicle"
        android:layout_below="@+id/button_check_miles"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
