<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".VehicleInfoActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Vehicle Information"
            android:id="@+id/vehicle_text"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_name_text"
            android:layout_gravity="center_horizontal"
            android:hint="@string/vehicle_name_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/vehicle_miles_text"
            android:layout_gravity="center_horizontal"
            android:hint="@string/vehicle_miles_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/vehicle_gallons_text"
            android:layout_gravity="center_horizontal"
            android:hint="@string/vehicle_gallons_hint"/>

        <Button
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="Enter"
            android:id="@+id/vehicle_enter_button"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>
